--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "classnames": "^2.2.6",
     "moment": "^2.29.4",
     "node-forge": ">=1.3.0",
+    "node-sass": "npm:sass@^1.62.1",
     "object-path": "^0.11.8",
     "postcss": "^8.4.14",
     "postcss-normalize": "^10.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
-    "sass": "^1.54.5",
+    "react-scripts": "^2.1.3",
     "typescript": "^4.7.4"
   },
   "scripts": {
